update trying to fix letter spacing

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav{
     font-weight: 600;
     color: rgba(255, 255, 255, 0.8);
     font-family: sf pro display;
+    font-weight: 600;
     width: 550px;
     justify-content: space-between;
     align-items: center;
@@ -142,7 +143,8 @@ nav{
     font-size: 13px;
     font-weight: 600;
     color: rgba(255, 255, 255, 0.8);
-    font-family: sf pro display;
+    font-family: sf pro;
+    font-weight: 600;
     justify-content: space-between;
     align-items: center;
 
@@ -279,7 +281,7 @@ nav{
     color: rgb(255, 255, 255, 0.6);
     font-family: sf pro display;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 400;
     
 }
 
@@ -525,6 +527,7 @@ nav{
 
 .item_content{
     border-bottom-right-radius: 10px;
+    font-weight: 300;
     /* background-color: black; */
     width: 65%;
     height: 100%;
